--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -5,8 +5,8 @@ repo: YnH-Instance-Status # The name of this repository
 sites:
   - name: "[Registrar] omg.lol"
     url: https://home.omg.lol
-  - name: "[Server] Main Server"
-    url: https://heartsdo.eu.org
+  - name: "[Server] Mainframe"
+    url: https://heartsdo.omg.lol
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
